k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatewayms-service
  labels:
    app: gatewayms
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gatewayms
